--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "gh-pages": "^3.1.0",
+    "typescript": "^4.3.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
