--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ss-boss-rush-tool",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cjs8487.github.io/SS-Boss-Rush-Tool/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
